--- a/README.Rmd
+++ b/README.Rmd
@@ -29,14 +29,11 @@ You can install the development version of sooty.watch from [GitHub](https://git
 pak::pak("mdsumner/sooty.watch")
 ```
 
-## Example
+Exists to report on what [sooty](https://github.com/mdsumner/sooty/) can access. 
 
-This is a basic example which shows you how to solve a common problem:
+Uset this link: 
 
-```{r example}
-library(sooty.watch)
-## basic example code
-```
+https://mdsumner.github.io/sooty.watch/articles/sooty-watch.html
 
 
 # Code of Conduct
